{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 15,
  "lineage": "dad4f05e-1392-68bc-50be-26e80934885d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "mv-244186-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478774109284:route-table/rtb-074ca7af9297108d6",
            "default_route_table_id": "rtb-074ca7af9297108d6",
            "id": "rtb-074ca7af9297108d6",
            "owner_id": "478774109284",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0820e7d4e8f762d88",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Internet"
            },
            "tags_all": {
              "Name": "Internet"
            },
            "vpc_id": "vpc-08c30a84e1954681f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mv-244186-gw",
            "aws_vpc.mv-244186-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mv-244186-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e87074e52e6c9f9",
            "arn": "arn:aws:ec2:us-east-1:478774109284:instance/i-00344a081c3878e4d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00344a081c3878e4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Cloud",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-041e310a0e9f5cad9",
            "private_dns": "ip-10-0-1-68.ec2.internal",
            "private_ip": "10.0.1.68",
            "public_ip": "34.228.25.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08720940acfb2dd27",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09aa4dc6b21e82aac",
            "tags": {
              "Name": "mv-244186-ec2",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "mv-244186-ec2",
              "terraform": "True"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04171d365e5a8c08b"
            ]
          },
          "dependencies": [
            "aws_security_group.mv-244186-sg",
            "aws_subnet.mv-244186-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mv-244186-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478774109284:internet-gateway/igw-0820e7d4e8f762d88",
            "id": "igw-0820e7d4e8f762d88",
            "owner_id": "478774109284",
            "vpc_id": "vpc-08c30a84e1954681f"
          },
          "dependencies": [
            "aws_vpc.mv-244186-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mv-244186-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478774109284:security-group/sg-04171d365e5a8c08b",
            "description": "SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04171d365e5a8c08b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH-VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "permite-ssh",
            "name_prefix": "",
            "owner_id": "478774109284",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "permite-ssh"
            },
            "tags_all": {
              "Name": "permite-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c30a84e1954681f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mv-244186-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mv-244186-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478774109284:subnet/subnet-09aa4dc6b21e82aac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09aa4dc6b21e82aac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "478774109284",
            "tags": {
              "Name": "subnet"
            },
            "tags_all": {
              "Name": "subnet"
            },
            "vpc_id": "vpc-08c30a84e1954681f"
          },
          "dependencies": [
            "aws_vpc.mv-244186-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mv-244186-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478774109284:vpc/vpc-08c30a84e1954681f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f22c8a1a3aff2fec",
            "default_route_table_id": "rtb-074ca7af9297108d6",
            "default_security_group_id": "sg-0d448cd3a9d36024e",
            "dhcp_options_id": "dopt-24ebb65e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08c30a84e1954681f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-074ca7af9297108d6",
            "owner_id": "478774109284"
          }
        }
      ]
    }
  ]
}